cicd/manifests/apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage-production
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: flux
  name: homepage
  namespace: homepage
spec:
  ingressClassName: istio
  rules:
    - host: homepage.srv-lab.server.home
      http:
        paths:
          - backend:
              service:
                name: homepage
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - homepage.srv-lab.server.home
      secretName: homepage-tls-secret
